# Geant4_Neutrones

./: CMakeLists.txt  Como correr todo.readme  Correr_Geant4.sh  README.md  creador_macros.sh  detector_He3.cc  dummy.txt  iso.mac  iterador_macros.sh  iterar_energias.sh  lector_geometrias.sh  matrix.txt  matrix_creator.cpp  neutron.mac  prueba_general.mac  prueba_geometria.mac  prueba_neutrones.mac
Script/: Func_Resp.C  Funcion_Respuesta.root  generador_func_resp.C  intento.C  matrix.txt  matrix_creator.cpp  prueba1.txt
include/: ActionInitialization.hh  Analysis.hh  DetectorConstruction.hh  DetectorMessenger.hh  EventAction.hh  PhysicsListNeutrons.hh  PrimaryGeneratorAction.hh  RunAction.hh  StackingAction.hh  SteppingAction.hh
src/: ActionInitialization.cc  DetectorConstruction.cc  DetectorMessenger.cc  EventAction.cc  PrimaryGeneratorAction.cc  RunAction.cc  StackingAction.cc  SteppingAction.cc
